--- a/games.html
+++ b/games.html
@@ -26,23 +26,16 @@
         <div class="games-grid">
             <!-- Example Button 1 -->
             <div class="game-card"
-                onclick="openModal('Project Alpha', 'A cool sci-fi shooter game.', 'https://example.com/alpha')">
-                <i class="fas fa-rocket"></i>
-                <h3>Project Alpha</h3>
+                onclick="openModal('N2704\'s game hub (Roblox)', 'My games which I created in roblox.', 'https://www.roblox.com/games/83975377258737/N2704s-game-hub')">
+                <i class="fa-solid fa-gamepad"></i>
+                <h3>N2704's game hub (Roblox)</h3>
             </div>
 
             <!-- Example Button 2 -->
             <div class="game-card"
-                onclick="openModal('Super RPG', 'An epic role-playing adventure.', 'https://example.com/rpg')">
-                <i class="fas fa-dragon"></i>
-                <h3>Super RPG</h3>
-            </div>
-
-            <!-- Add more buttons here by copying the block above -->
-            <div class="game-card"
-                onclick="openModal('Mystery Puzzle', 'Solve the ancient riddles.', 'https://example.com/puzzle')">
-                <i class="fas fa-puzzle-piece"></i>
-                <h3>Mystery Puzzle</h3>
+                onclick="openModal('My april fool\'s day game (Roblox)', 'My april fool\'s day game which I created in roblox.', 'https://www.roblox.com/games/12966472133/My-april-fool-game-XD')">
+                <i class="fa-solid fa-gamepad"></i>
+                <h3>My april fool's day game (Roblox)</h3>
             </div>
         </div>
     </main>
